--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,82 @@
- 
+# 启用 PHP 错误日志
+php_flag display_errors off
+php_value error_reporting E_ALL
+php_value error_log logs/error.log
+
+# 设置上传限制
+php_value upload_max_filesize 10M
+php_value post_max_size 10M
+php_value max_execution_time 300
+php_value max_input_time 300
+php_value memory_limit 128M
+
+# 安全头部
+Header set X-Content-Type-Options "nosniff"
+Header set X-Frame-Options "SAMEORIGIN"
+Header set X-XSS-Protection "1; mode=block"
+Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';"
+
+# 禁止目录列表
+Options -Indexes
+
+# 设置默认字符集
+AddDefaultCharset UTF-8
+
+# 压缩文本文件
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain text/html text/xml text/css text/javascript application/xml application/xhtml+xml application/rss+xml application/javascript application/x-javascript application/json
+</IfModule>
+
+# 设置缓存控制
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+</IfModule>
+
+# 保护敏感文件
+<FilesMatch "^(\.htaccess|\.htpasswd|\.git|\.env|composer\.json|composer\.lock|\.user\.ini)$">
+    Order Allow,Deny
+    Deny from all
+</FilesMatch>
+
+# 限制PHP文件访问
+<FilesMatch "\.php$">
+    Order Allow,Deny
+    Allow from all
+</FilesMatch>
+
+# 保护上传目录
+<Directory "uploads">
+    Order Deny,Allow
+    Deny from all
+    <FilesMatch "\.(jpg|jpeg|png|gif|pdf|doc|docx|txt)$">
+        Allow from all
+        Header set Content-Disposition attachment
+    </FilesMatch>
+</Directory>
+
+# 防止脚本注入
+Options +FollowSymLinks
+RewriteEngine On
+RewriteCond %{REQUEST_METHOD} ^(TRACE|TRACK)
+RewriteRule .* - [F]
+
+# 重定向所有HTTP请求到HTTPS
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# API路由规则
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^api/(.*)$ api/$1.php [L,QSA]
+
+# 错误页面处理
+ErrorDocument 404 /404.html
+ErrorDocument 403 /404.html
+ErrorDocument 500 /404.html
